--- a/css/custom.css
+++ b/css/custom.css
@@ -75,13 +75,23 @@ table tr td {
     animation: metroid 2s steps(8) infinite;
 }
 form {
+    background-color: rgba(255, 255, 255, .1);
     color: inherit;
+    border: 3px solid #ccc;
+    padding: 1em;
+    -webkit-border-radius: 1em;
+    border-radius: 1em;
 }
-form .fanlabel {
-    line-height: 32px;
-    font-size: 90%;
-    text-align: left;
-    float: right;
+input[type="text"],
+input[type="email"] {
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
+form .fan {
+    color: #ccc;
+}
+form .button {
+    margin-bottom: 0;
 }
 @-webkit-keyframes metroid {
     100% {
